--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
     <nav>
         <ul>
-            <li><a href="home.html">Home</a></li>
+            <li><a href="index.html">Home</a></li>
             <li><a href="letter.html">Letter</a></li>
             <li><a href="coupons.html">Coupons</a></li>
             <li><a href="cake.html">Birthday Cake</a></li>
@@ -144,7 +144,7 @@
             } else if (scrollPosition >= 500 && scrollPosition < 700) {
                 message.innerText = "Wishing you the best birthday!";
             } else if (scrollPosition >= 700 && scrollPosition < 900) {
-                message.innerText = "Love ya ♡";
+                message.innerText = "Happy Birthday!";
             } else {
                 messageContainer.classList.remove('active');
             }
