--- a/gift.html
+++ b/gift.html
@@ -24,7 +24,7 @@
 
     <nav>
         <ul>
-            <li><a href="home.html">Home</a></li>
+            <li><a href="index.html">Home</a></li>
             <li><a href="letter.html">Letter</a></li>
             <li><a href="coupons.html">Coupons</a></li>
             <li><a href="cake.html">Birthday Cake</a></li>
