--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
     <header class="cover">
         <img src="cover1.jpg" alt="Birthday Cover Image">
-        <h1>Happy Birthday Nav!</h1>
+        <h1>Happy Birthday</h1>
         <p>Welcome to your special birthday website! Explore the pages for fun surprises.</p>
     </header>
 
